@@ -1,10 +1,16 @@
-2011-11-08  Jonathan Wakely  <jwakely.gcc@gmail.com>
+2011-11-07  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR libstdc++/51018
+	* include/profile/impl/profiler_node.h (__stack_hash::
+	operator()(__stack_t)): Just use std::size_t everywhere.
+
+2011-11-07  Jonathan Wakely  <jwakely.gcc@gmail.com>
 
 	* include/std/future (__future_base::_Ptr): Use alias-declaration.
 	(__is_same_pkgdtask): Rename to __constrain_pkgdtask and use decay
 	instead of remove_reference so that cv-quals are removed.
 
-2011-11-08  Ed Smith-Rowland  <3dw4rd@verizon.net>
+2011-11-07  Ed Smith-Rowland  <3dw4rd@verizon.net>
 
 	* include/precompiled/stdc++.h: Add cstdalign.
 
